--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
       <artifactId>postgresql</artifactId>
       <version>42.7.5</version>
     </dependency>
+
+    <!-- Java Environmental Variables -->
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>3.2.0</version>
+    </dependency>
   </dependencies>
 
   <build>
