--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
-
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate DDL auto (create, create-drop, validate update)
+spring.jpa.hibernate.ddl-auto=update
