--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+    <!-- Spring Boot Validation -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+
     <!-- Database Driver -->
     <dependency>
       <groupId>org.postgresql</groupId>
