updated settings for logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate DDL auto (create, create-drop, validate update)
 spring.jpa.hibernate.ddl-auto=update
+
+## Logging Properties for SQL
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# For connection pool
+logging.level.com.zaxxer.hikari=DEBUG
